k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth
  labels:
    app:  auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - image:  auth:latest
        imagePullPolicy: IfNotPresent
        name:  auth
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /api/auth/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/auth/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  auth-main
